--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "cloudinary": "^1.39.0",
     "cookie-parser": "~1.4.4",
     "cors": "^2.8.5",
@@ -15,6 +16,7 @@
     "express-fileupload": "^1.4.0",
     "mongoose": "^7.4.1",
     "morgan": "~1.9.1",
+    "uid2": "^1.0.0",
     "uniqid": "^5.4.0"
   }
 }
