--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "dotenv": "^16.3.1",
     "express": "~4.16.1",
     "express-fileupload": "^1.4.0",
+    "global": "^4.4.0",
     "handlebars": "^4.7.8",
     "mongoose": "^7.4.1",
     "morgan": "~1.9.1",
-    "socket.io": "^4.7.2",
     "nodemailer": "^6.9.4",
+    "nodemon": "^3.0.1",
+    "socket.io": "^4.7.2",
     "uid2": "^1.0.0",
     "uniqid": "^5.4.0"
   }
